objects/CRMforNonProfit__Transaction_Sync__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Mapping__c</fullName>
        <label>Mapping</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Source_Account_Number__c,Transaction_Amount__c,Transaction_Date__c</fullName>
                    <label>Source Account, Amount, Date</label>
                </value>
                <value>
                    <fullName>Source_Account_Number__c,Transaction_Amount__c,Transaction_Date__c,Variable__c</fullName>
                    <label>Source Account, Amount, Date, Variable</label>
                </value>
                <value>
                    <fullName>Transaction_External_Id__c</fullName>
                    <default>true</default>
                    <label>Transaction Id</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Source_API__c</fullName>
        <label>Source API</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSAS - Accounts API</fullName>
                </value>
                <value>
                    <fullName>CSAS - Databanking API</fullName>
                </value>
                <value>
                    <fullName>Fio - API Banking</fullName>
                </value>
                <value>
                    <fullName>UniCredit - Business Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_From__c</fullName>
        <label>Sync From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_To__c</fullName>
        <label>Sync To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Transaction Sync</label>
    <nameField>
        <label>Transaction Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>